# noxem

./: .gitignore  CLAUDE.md  Plans.md  README.md  agent3-verification.md  fix-memory-provider.sh  fixinglog.md  hermes-config.yaml  install.bat  install.sh  noxem-launcher.bat  noxem-launcher.sh  noxem-v2.1-upgrade-plan.md
.github/: mizumi-feedback.json  mizumi-memory.md
.github/workflows/: mizumi.yml  pr-agent.yml
hooks/: post-llm-extract.mjs  pre-llm-memory.mjs
modules/infra/declarative-gateway/: noxem-adapter.mjs
modules/infra/diagnostic-compiler/: CHANGELOG.md  noxem-adapter.mjs
modules/infra/lesson-vault/: noxem-adapter.mjs  reference.txt
modules/management/ambient-injector/: .gitignore  AGENTS.md  CHANGELOG.md  README.md  noxem-adapter.mjs  package-lock.json  package.json
modules/management/entity-ranker/: noxem-adapter.mjs
modules/management/spatial-filter/: noxem-adapter.mjs
modules/reasoning/compaction-coordinator/: .coderabbit.yaml  .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MCP-HANDBOOK.md  noxem-adapter.mjs
modules/reasoning/compaction-coordinator/marm-dashboard/: .gitignore  Dockerfile  README.md  pyproject.toml
modules/reasoning/compaction-coordinator/marm-dashboard/marm_dashboard/: __init__.py  __main__.py  auth.py  config.py  db.py  server.py
modules/reasoning/compaction-coordinator/marm-dashboard/marm_dashboard/static/: index.html
modules/reasoning/compaction-coordinator/marm-dashboard/marm_dashboard/static/assets/: app.css  app.js
modules/reasoning/compaction-coordinator/marm-dashboard/tests/: conftest.py  test_dashboard_auth.py  test_dashboard_db.py  test_dashboard_mcp_status.py
modules/reasoning/compaction-coordinator/marm-mcp-server/: .gitignore  Dockerfile  README.md  docker-build.sh  docker-compose.yml  docker-run.bat  install.sh  publish_to_mcp.py  pyproject.toml  requirements.txt  requirements_stdio.txt  server.json  server_stdio.py  validate_server_json.py
modules/reasoning/compaction-coordinator/marm-mcp-server/marm-docs/: MCP-HANDBOOK.md  README.md  ROADMAP.md
modules/reasoning/compaction-coordinator/marm-mcp-server/marm_mcp_server/: __init__.py  server.py  server_stdio.py
modules/reasoning/compaction-coordinator/marm-mcp-server/marm_mcp_server/config/: settings.py
modules/reasoning/compaction-coordinator/marm-mcp-server/marm_mcp_server/core/: compaction.py  consolidation.py  events.py  memory.py  models.py  rate_limiter.py  response_limiter.py  shutdown_manager.py  write_queue.py
modules/reasoning/compaction-coordinator/marm-mcp-server/marm_mcp_server/endpoints/: compaction.py  logging.py  memory.py  notebook.py  reasoning.py  session.py  system.py
modules/reasoning/compaction-coordinator/marm-mcp-server/marm_mcp_server/middleware/: auth.py  rate_limiting.py
modules/reasoning/compaction-coordinator/marm-mcp-server/marm_mcp_server/services/: documentation.py  notebook.py
modules/reasoning/compaction-coordinator/marm-mcp-server/marm_mcp_server/utils/: helpers.py  security.py
modules/reasoning/compaction-coordinator/marm-mcp-server/scripts/: bench_hotpath.py  dump_tool_schema.py
modules/reasoning/compaction-coordinator/marm-mcp-server/tests/: conftest.py  test_cli_entrypoint.py  test_compaction_auto_apply.py  test_compaction_staging.py  test_compaction_worker.py  test_consolidation_exact_dedup.py  test_consolidation_write_time.py  test_docker_transports.py  test_http_app.py  test_http_rate_limit.py  test_http_security_regressions.py  test_http_tools.py  test_memory_database.py  test_notebook_service.py  test_rate_limiter.py  test_response_limiter.py  test_security_key_generation.py  test_server_logging.py  test_stdio_transport.py
modules/reasoning/ingest-pipeline/: noxem-adapter.mjs
modules/reasoning/strategy-distiller/: noxem-adapter.mjs
modules/retrieval/cross-modal-extractor/: noxem-adapter.mjs
modules/retrieval/delta-processor/: noxem-adapter.mjs
noxem-hermes/: pyproject.toml
noxem-hermes/src/noxem_hermes/: __init__.py  memory_provider.py  plugin.py
qwen-proxy/: .dockerignore  .gitignore  Dockerfile  README.md  _add_context_offload.js  _add_offload_v2.js  _fix_nolimit.js  _fix_role.js  _patch_offload_v2.js  _patch_offload_v3.js  _patch_upload.js  context-test-result.txt  docker-compose.yml  full-tool-test-report.md  hermes-report.md  long-session-test.txt  netlify.toml  package-lock.json  package.json  proxy-audit-report.md  stress-test-30min.mjs  stress-test-log.jsonl  stress-test-report.txt  test-parser.js  test-parser2.js  test-parser3.js  test-parser4.js  test-splitmulti-edge.js  test_toolcall.js  vercel.json
qwen-proxy/api/: index.js
qwen-proxy/docs/: api.md  architecture.md  cloudflare-workers.md  contributing.md  issues.md
qwen-proxy/src/: server.js  start.js
qwen-proxy/webui/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
scripts/: _install_puppeteer.sh  _tmp_fix.py
server/: advisor-engine.mjs  benchmark.sh  bundle-search.mjs  coreference-resolver.mjs  ddg-search.mjs  embedding-engine.mjs  extraction-queue.mjs  gemma4-server.mjs  llm-config.mjs  llm-fetch.mjs  mcp-server.mjs  memory-extract.mjs  memory-maintenance.mjs  memory-pipeline.mjs  memory-server.mjs  memory-store.mjs  mock-llm.mjs  module-registry.mjs  network-diagnostics.mjs  package-lock.json  package.json  query-rewrite.mjs  qwenproxy-adapter.mjs  research-engine.mjs  rlm-bridge.mjs  rlm_sidecar.py  run-cache-test.sh  run-embedding-test.sh  run-test.sh  start_wsl.sh  test-bundle.sh  test-fts5.sh  test-llm-features.sh  test-mcp.sh  test-mcp2.sh  test-mcp3.sh  test-proc-debug.sh  test-runner.sh  test-v2-endpoints.sh  test-v2.sh  (+3 more)
(+296 files in other folders)
