[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "noxem-hermes"
version = "0.3.0"
description = "Noxem Memory Provider for Hermes Agent - SQLite+FTS5 persistent memory with session-based conversation storage"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
  {name = "Hermes Agent"}
]
keywords = [
  "ai",
  "memory",
  "hermes",
  "plugin",
  "agent",
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
]
dependencies = [
  "noxem-core>=0.2.0",
]

[project.entry-points."hermes.plugins"]
noxem = "noxem_hermes.plugin:register"

[project.optional-dependencies]
dev = [
  "pytest>=7.0.0",
  "pytest-asyncio>=0.21.0",
  "black>=23.0.0",
  "ruff>=0.1.0",
]

[project.urls]
Homepage = "https://github.com/hermes-agent/noxem"
Documentation = "https://github.com/hermes-agent/noxem#readme"
Repository = "https://github.com/hermes-agent/noxem"

[tool.hatch.build.targets.wheel]
packages = ["src/noxem_hermes"]

[tool.black]
line-length = 88
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 88
select = ["E", "F", "I", "N", "W", "UP"]
