[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "marm-dashboard"
version = "1.0.4"
description = "Local web dashboard for MARM memory (SQLite at ~/.marm)"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.4",
    "uvicorn>=0.32.0",
    "pydantic>=2.9.2",
]

[project.optional-dependencies]
embeddings = ["sentence-transformers>=3.3.1", "numpy>=2.1.2"]
dev = ["pytest>=8.3.0", "httpx>=0.27.0"]

[project.scripts]
marm-dashboard = "marm_dashboard.__main__:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["marm_dashboard*"]

[tool.setuptools.package-data]
marm_dashboard = ["static/**/*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
